--- a/unpublishedScripts/marketplace/appTemplate/html/template.html
+++ b/unpublishedScripts/marketplace/appTemplate/html/template.html
@@ -22,6 +22,7 @@ See the accompanying file LICENSE or http://www.apache.org/licenses/LICENSE-2.0.
     <hr />
 
     <div id="icon" class="off">
+        <!-- HiFi CDN doesn't handle SVG files properly so have to embed SVG. -->
         <svg id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" 
             baseProfile="full" width="50" height="50" viewBox="0 0 50.00 50.00" enable-background="new 0 0 50.00 50.00" 
             xml:space="preserve">
